Fix scrollbars appearing with the FileExplorer

--- a/src/Layouts/FileExplorer/FileExplorer.module.sass
+++ b/src/Layouts/FileExplorer/FileExplorer.module.sass
@@ -4,4 +4,4 @@
     padding: 0 dimensions.$page-vertical-padding dimensions.$page-horizontal-padding
     margin-top: 20px
     flex-grow: 1
-    overflow: scroll
+    overflow-y: auto
